# cmake-template-project

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
cmake/: define_module.cmake
modules/template-app/: CMakeLists.txt
